--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,8 +43,8 @@ div#main.row{
     width: 100%;
     color: white;
     bottom: 0;
-    position: relative;
-    padding: 5px 30px 0px px;
+    position: fixed;
+    padding: 5px 30px 0px 0px;
     height: 80px;
 }
 #footer a{
@@ -72,11 +72,14 @@ div#main.row{
 } */
 
 .static-content{
+    margin: auto;
     background-color: rgba(192,192,192,.8);
     padding-left: 10px;
     border: 1px solid rgba(128,128,128,.2);
     border-radius: 5px;
-    width: 50%;
+    width: 90%;
+    margin-top: 60px;
+
 }
 .static-content p, h1, h3, h4{
     margin-left: 20px;
