--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,9 +11,6 @@ html{
     min-height: 100%;
     background-color: #b3ccff;
 }
-
-
-
 header.row{
     min-width: 100%;
     position: fixed;
@@ -27,11 +24,9 @@ header.row{
 }
 
 div#main.row{
-
     margin-bottom: 60px;
     padding-bottom: 0px;
 }
-
 
 /**
  * ANY STYLES REGARDING THE FOOTER ARE HERE
@@ -64,7 +59,6 @@ div#main.row{
     font-size: 16px;
 }
 
-
 /**
  * STANDARD PAGES: TEMPLATED STYLES
  */
@@ -92,6 +86,18 @@ div#main.row{
     margin-left: 15px;
     padding-bottom: 5px;
 }
+
+/**
+ * Setting up these styles to go into the auto-generated image gallery by Javascript
+ * Direction for this using Javascript/AJAX is at https://davidwalsh.name/generate-photo-gallery
+ * However, the PHP code may need some planning in order to integrate it properly into Laravel (and in an auto-generation Controller?)
+ */
+.clear { clear:both; }
+.photo-link {padding:5px; margin:5px; border:1px solid #ccc; display:block; 
+        width:200px; float: left;}
+.photo-link:hover {border-color: #999;}
+/* end of image gallery styles */
+
 
 /**
  * ANY STYLES DESIGNED EXCLUSIVELY FOR THE HOME PAGE ARE HERE
@@ -124,9 +130,26 @@ div#main.row{
     margin-right: 10px;
 }
 
+/* GALLERY PAGE STYLES */
+#gallery-thumbnails{
+    margin-left: 20px;
+}
 
+#gallery-thumbnails img{
+    padding: 10px;
+}
+.alert-box h2{
+    top-margin: 200px;
+    color: green;
 
+}
+.secure h3{
+    top-margin: 150px;
+}
 
+/**
+ * THIS IS BEING USED ON UPLOAD.BLADE.PHP WHICH IS THE OLD UPLOAD FORM AND WILL LIKELY BE REMOVED
+ */
 .secure h3{
     font-family: 'Julius Sans One', sans-serif;
     font-weight: 600;
@@ -159,26 +182,7 @@ div#main.row{
     padding-bottom: 5px;
     padding-left: 5px;
 }
-
-/* GALLERY PAGE STYLES */
-#gallery-thumbnails{
-    margin-left: 20px;
-}
-
-#gallery-thumbnails img{
-    padding: 10px;
-}
-.alert-box h2{
-    top-margin: 200px;
-    color: green;
-
-}
-.secure h3{
-    top-margin: 150px;
-}
-
-
-
+/* END OF STYLES FOR UPLOAD.BLADE.PHP */
 
 /*
 #sidebar-nav{
