--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,7 @@ div#main.row{
     border-radius: 5px;
     width: 90%;
     margin-top: 60px;
+    margin-bottom: 60px;
 
 }
 .static-content p, h1, h3, h4{
