Fixed email functionality, starting to format html emails

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
 
 html{
-    background-color: #b3ccff;
+    background-color: #083450;
 }
 .container{
     min-width: 100%;
