--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,18 +4,23 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
 
 html{
-    background-color: #083450;
+    /* background-color: #083450; */
+    background-color: white;
 }
+
 .container{
     min-width: 100%;
     min-height: 100%;
-    background-color: #083450;
+    /* background-color: #083450; very light grey is : #cccccc; */
+    background-color: white; /* very light grey for main background */
 }
+
 header.row{
     min-width: 100%;
     position: fixed;
     z-index: 3;
 }
+
 .title-container{
     background-color: #666666;
     width: 100%;
@@ -34,18 +39,53 @@ nav.navbar.navbar-default{
     color: white;
     border: solid #083450 1px;
 }
-#content-links h1, h2, h3, h4{
+#navbar-override{
+    /* This controls stlyles that affects the entire background/block of the navigation bar from Bootstrap and overrides it where noted */
+    background-color: black;
+    font-family: 'Open Sans', sans-serif;
+}
+#navbar-override a{
+    color: #e6e6e6;
+    font-size: 14px;
+}
+.navbar .nav > li.dropdown.open.active > a:hover,
+.navbar .nav > li.dropdown.open > a {
+    background-color: #f2f2f2;
+    color: #000000 !important;
+}
+
+#navbar-dropdown-override{
+    background-color: #f2f2f2; /* Adds a near-white background to the dropdown itself (not the parent link causing the dropdown) */
+    color: #000000 !important;
+}
+
+#navbar-dropdown-override a{
+    color: #000000;
+}
+
+#navbar-dropdown-override a:hover{
+    background-color: #80bfff; /* medium blue background when navbar items are hovered over */
+}
+
+/**
+ * #code-content overrides any Bootstrap styles for any of the Code Samples pages (also has the static-content class applied) 
+ */
+#code-content h1, h2, h3, h4{
     color: white;
 }
-#content-links a{
+
+#code-content a{
     color: white;
     font-size: 18px;
     font-family: 'Oxygen', sans-serif;
     font-weight: bold;
 }
-#content-links a:hover{
+
+#code-content a:hover{
     color: #770000;
 }
+
+
 /**
  * ANY STYLES REGARDING THE FOOTER ARE HERE
  */
@@ -59,14 +99,17 @@ nav.navbar.navbar-default{
     color: white;
     bottom: 0;
     position: fixed;
-    padding: 5px 30px 0px 0px;
+    padding-bottom: 100px; 
+    padding-top: 10px;
     height: 80px;
 }
+
 #footer a{
     color: #A30000;
     font-size: 16px;
 
 }
+
 .footer-left{
     list-style-type: none;
     font-size: 16px;
@@ -75,11 +118,33 @@ nav.navbar.navbar-default{
     text-align: right;
     list-style-type: none;
     font-size: 16px;
+
+
+}
+.footer-right a, .footer-left a{
+    color: #337ab7 !important;
+    font-size: 20px !important;
+}
+.footer-right a:hover, .footer-left a:hover{
+    background-color: #337ab7; /* Adds a near-white background to the dropdown itself (not the parent link causing the dropdown) */
+    border: 1px #337ab7 solid;
+    border-radius: 10px;
+    padding: 2px 2px 2px 2px;
+    color: #fff !important;
 }
 
 /**
  * STANDARD PAGES: TEMPLATED STYLES
  */
+.page-header{
+    /* color: #337ab7; */
+    color: black;
+    text-shadow: 4px 2px 6px #404040;
+    font-size: 4em !important;
+    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+
+}
 .static-content{
     margin: auto;
     /* background-color: rgba(192,192,192,.8); */
@@ -105,8 +170,8 @@ nav.navbar.navbar-default{
 }
 #content{
     min-width:100%;
-
 }
+
 .page-title{
     font-family: 'Julius Sans One', sans-serif;
     font-size: 40px;
@@ -127,63 +192,79 @@ nav.navbar.navbar-default{
 .photo-link:hover {border-color: #999;}
 /* end of image gallery styles */
 
-
 /**
  * ANY STYLES DESIGNED EXCLUSIVELY FOR THE HOME PAGE ARE HERE
  */
 .landing-image {
-    margin-top: 10px;
+    padding-top: 100px;
     float: left;
     border: 1px solid black;
     border-radius: 5px;
 }
-.right-home{
+
+#right-home{
     /*right-home border*/
-    border: 2px solid rgba(128,128,128,.2);
-    border-radius: 5px;
-    background-color: rgba(128,128,128,.2);
+   /* border: 2px solid rgba(128,128,128,.2);
+    border-radius: 5px; */
+    /* background-color: rgba(128,128,128,.2); */
     float: left;
-    margin-top: 10px;
-    margin-left: 50px;
+    margin-top: 80px;
+    margin-left: 40px;
     width: 50%;
     font-family: 'Open Sans', sans-serif;
     text-align: right;
+    height: 500px;
+    display:inline;
 }
-.right-home h1{
-    font-size: 20px;
-    margin-right: 10px;
-}
-.right-home p{
-    padding-top: 10px;
-    font-size: 16px;
+
+#right-home h1{
+    font-size: 22px;
     margin-right: 10px;
 }
 
+#right-home p{
+    padding-top: 10px;
+    font-size: 18px;
+    margin-right: 10px;
+}
+#right-home img{
+    margin-bottom: 20px;
+}
+#social-corner{
+    margin-bottom: 120px;
+    height: 90%;
+    clear:both;
+    float:right;
+}
+
+
 /* GALLERY PAGE STYLES */
 #gallery-thumbnails{
-    /* margin-left: 20px; */
     display: inline;
     margin: auto;
 }
 
 #gallery-thumbnails img{
     padding: 10px;
-
 }
+
 .photo-list{
     display: block;
     margin-left: auto;
     margin-right: auto;
     list-style: none;
 }
+
 .photo-list li{
     float:left;
 }
+
 .alert-box h2{
     top-margin: 200px;
     color: green;
 
 }
+
 .secure h3{
     top-margin: 150px;
 }
@@ -207,6 +288,7 @@ nav.navbar.navbar-default{
     min-width: 200px;
     text-transform: uppercase;
 }
+
 .control-group{
     margin-top: 40px;
     margin-bottom: 40px;
@@ -215,6 +297,7 @@ nav.navbar.navbar-default{
 .send-btn{
     margin-left: 15px;
 }
+
 .controls input{
     margin-left: 15px;
     border: 2px solid rgba(128,128,128,.2);
@@ -225,18 +308,8 @@ nav.navbar.navbar-default{
 }
 /* END OF STYLES FOR UPLOAD.BLADE.PHP */
 
-/*
-#sidebar-nav{
-    
-    font-weight: 600;
-    color: #23527c;
-} 
-
-.site-description{
-    font-family: 'Julius Sans One', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    padding-top: 10px;
+#gallery-footer{
+    margin-top: 130px !important;
+    clear: both;
+    min-height: 50px;
 }
-
-*/
