--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,6 +8,7 @@ html{
     background-color: white;
 }
 
+
 .container{
     min-width: 100%;
     min-height: 100%;
@@ -90,6 +91,7 @@ nav.navbar.navbar-default{
  * ANY STYLES REGARDING THE FOOTER ARE HERE
  */
 #footer{
+    clear: both;
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
     font-size: 16px;
@@ -97,17 +99,12 @@ nav.navbar.navbar-default{
     background-color: black;
     width: 100%;
     color: white;
-    bottom: 0;
-    position: fixed;
-    padding-bottom: 100px; 
-    padding-top: 10px;
-    height: 80px;
-}
-
-#footer a{
-    color: #A30000;
-    font-size: 16px;
-
+    margin-bottom: 0;
+    margin-top: 40px;
+        position: relative
+    padding-bottom: 80px; 
+    padding-top: 0px;
+    height: 70px;
 }
 
 .footer-left{
@@ -155,6 +152,7 @@ nav.navbar.navbar-default{
     width: 80%;
     margin-top: 60px;
     margin-bottom: 80px;
+    color: black;
 }
 .static-content p, h1, h3, h4, h5{
     margin-left: 20px;
@@ -175,7 +173,7 @@ nav.navbar.navbar-default{
 .page-title{
     font-family: 'Julius Sans One', sans-serif;
     font-size: 40px;
-    color: white;
+    color: black;
     margin-left: 15px;
     padding-bottom: 5px;
 }
@@ -242,16 +240,19 @@ nav.navbar.navbar-default{
 #gallery-thumbnails{
     display: inline;
     margin: auto;
+    min-height: 100%;
+
 }
 
 #gallery-thumbnails img{
     padding: 10px;
 }
 
-.photo-list{
+.photo-list ul{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 40px;
     list-style: none;
 }
 
@@ -308,8 +309,36 @@ nav.navbar.navbar-default{
 }
 /* END OF STYLES FOR UPLOAD.BLADE.PHP */
 
-#gallery-footer{
-    margin-top: 130px !important;
+
+/* DO NOT remove or modify this style as it separates the photos from the bottom of the page
+** allowing either content to be below the pictures if needed or grant extra space/padding below galleries
+*/
+#gallery-clear-bottom{
+    display: block !important;
     clear: both;
-    min-height: 50px;
+}
+/**
+ * To be used for ALL outgoing/external links
+ */
+.outgoingLink{
+     color: #337ab7 !important;
+     font-size: 13px !important;
+}
+.outgoingLink:hover{
+    background-color: #337ab7;
+    color: white !important;
+    padding: 2px 2px 2px 2px;
+}
+/**
+ * To be used for ALL internal links
+ */
+.internalLink{
+    font-size: 26px;
+    font-weight: bold;
+    color: blue !important;
+    padding: 4px;
+}
+.internalLink:hover{
+    color: white !important;
+    background-color: #337ab7;
 }
