--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,11 +97,10 @@ nav.navbar.navbar-default{
     font-size: 16px;
     font-stretch: extra-expanded;
     background-color: black;
-    width: 100%;
     color: white;
     margin-bottom: 0;
     margin-top: 40px;
-        position: relative
+    position: relative;
     padding-bottom: 80px; 
     padding-top: 0px;
     height: 70px;
@@ -110,13 +109,19 @@ nav.navbar.navbar-default{
 .footer-left{
     list-style-type: none;
     font-size: 16px;
+    width: 45%;
+    float:left;
 }
 .footer-right{
     text-align: right;
     list-style-type: none;
     font-size: 16px;
-
-
+    float: left;
+    width: 45%;
+}
+.footer-right a {
+    float: right;
+    padding: 5px;
 }
 .footer-right a, .footer-left a{
     color: #337ab7 !important;
@@ -129,6 +134,7 @@ nav.navbar.navbar-default{
     padding: 2px 2px 2px 2px;
     color: #fff !important;
 }
+
 
 /**
  * STANDARD PAGES: TEMPLATED STYLES
@@ -196,8 +202,6 @@ nav.navbar.navbar-default{
 .landing-image {
     padding-top: 100px;
     float: left;
-    border: 1px solid black;
-    border-radius: 5px;
 }
 
 #right-home{
