--- a/public/css/style.css
+++ b/public/css/style.css
@@ -346,3 +346,36 @@ nav.navbar.navbar-default{
     color: white !important;
     background-color: #337ab7;
 }
+
+/**
+ * Slideshow CSS
+ */
+    #slideshow {
+        position: relative;
+        width: 300px;
+        height: 510px;
+        padding: 10px;
+    }
+ 
+    #slideshow > div {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+    }
+    #slideshow > div > img {
+        border: 2px solid black;
+        box-shadow: 2px 2px 20px black;
+    }
+
+    .picture{
+        position: relative;
+        width:100%;
+    }
+    .picture p{
+        position: absolute;
+        width:100%;
+        color: black;
+        font-size: 18px;
+        top: 250px;
+        text-align: center;
+    }
