--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,13 +96,12 @@ nav.navbar.navbar-default{
     background-color: black;
     color: white;
     margin-bottom: 0;
-    position: fixed;
-    bottom: 0;
+    position: relative;
     width: 100%;
-    padding-bottom: 6%;
-    padding-top: -10px;
-    margin-top: 80px !important;
-    height: 75px;;
+    padding: 2%;
+    padding-top: 1%; 
+    margin-top: 58em; !important;
+    height: 6.5em;
 }
 
 .footer-left{
@@ -110,8 +109,8 @@ nav.navbar.navbar-default{
     font-size: 16px;
     width: 45%;
     float:left;
-    position: relative;
-    top: 10px;
+    position: absolute;
+    top: 1em;
 }
 .footer-left a{
     
@@ -141,7 +140,7 @@ nav.navbar.navbar-default{
     padding: 2px 2px 2px 2px;
     color: #fff !important;
 }
-
+.footer-right > li > a > img{width: 3em; height: 3em;}
 .bottom-spacer{
     margin-bottom: 200px;
 }
@@ -150,37 +149,51 @@ nav.navbar.navbar-default{
  * STANDARD PAGES: TEMPLATED STYLES
  */
 .page-header{
-    /* color: #337ab7; */
     color: black;
     text-shadow: 4px 2px 6px #404040;
     font-size: 4em !important;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
-
 }
 .static-content{
-    margin: auto;
-    /* background-color: rgba(192,192,192,.8); */
-    background-color: rgba(255,255,255, .25);
-    padding-left: 10px;
-    border: 1px solid rgba(128,128,128,.2);
-    border-radius: 5px;
+    margin: auto; padding-left: 1em; padding-right: 10em;
+    margin-top: 10em; margin-bottom: 10em;
+    background-color: rgba(255,255,255, .25); color: black;
     width: 80%;
-    margin-top: 60px;
-    margin-bottom: 80px;
-    color: black;
 }
-.static-content p, h1, h3, h4, h5{
-    margin-left: 20px;
+.static-content p{
+    font-size: 1.2em;
+    letter-spacing: 0.3px;
+}
+.static-content h1{
+    font-size: 3em; letter-spacing: 2px;
+    text-transform: uppercase; text-align: center;
+    color: white; background-color: #252525;
+    padding-top: 0.2em; padding-bottom: 0.2em;
+    border: 1px solid black; border-radius: 0.2em;
+    width: 110%;
+}
+.static-content h3{
+    font-size: 3em; letter-spacing: 2px; text-align: center;
+    border-top: 2px solid black; text-transform: uppercase;
+    border-bottom: 2px solid black; border-radius: 0.3em;
+    color: white; background-color: #252525; width: 110%;
+    padding-top: 0.2em; padding-bottom: 0.2em;
 }
 .static-content a{
     color: #ED1C26;
+    transition-duration: 0.5s;
+    font-weight: bold;
 }
 .static-content a:hover{
     color: #252525;
+    transition-duration: 0.5s;
 }
 .static-content ul{
     list-style: none;
+}
+.static-content > img{
+   margin: auto; margin-left: 35%; margin-right: 0%;
 }
 #content{
     min-width:100%;
@@ -217,22 +230,21 @@ nav.navbar.navbar-default{
 #right-home{
     float: left;
     margin-top: 80px;
-    margin-left: 40px;
+    margin-left: 10em;
     width: 40%;
     font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
     text-align: right;
     height: 15%;
     display:inline;
 }
 
 #right-home h1{
-    font-size: 28px;
-    margin-right: 10px;
+    margin-right: 10px; 
 }
 
 #right-home p{
     padding-top: 10px;
-    font-size: 18px;
     margin-right: 10px;
 }
 #right-home img{
