--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,7 +70,7 @@ nav.navbar.navbar-default{
 }
 
 #navbar-dropdown-override a:hover{
-    background-color: #80bfff; /* medium blue background when navbar items are hovered over */
+    background-color: #82734C; /* medium blue background when navbar items are hovered over 80BFFF*/
 }
 
 /**
@@ -102,7 +102,7 @@ nav.navbar.navbar-default{
     background-color: #000000;
     color: #FFFFFF;
     margin-bottom: 0;
-    position: relative;
+    position: absolute;
     width: 100%;
     padding: 2%;
     padding-top: 1%; 
@@ -136,11 +136,11 @@ nav.navbar.navbar-default{
     padding: 5px;
 }
 .footer-right a, .footer-left a{
-    color: #337ab7 !important;
+    color: #82734C /*#337ab7*/ !important;
     font-size: 18px !important;
 }
 .footer-right a:hover, .footer-left a:hover{
-    color: #252525 !important;
+    color: #82734C !important;
     filter: grayscale(100%);
 }
 .footer-right > li > a > img{width: 3em; height: 3em;}
@@ -511,4 +511,27 @@ nav.navbar.navbar-default{
 .program-description p{
     font-family: 'proza_libreregular', sans-serif;
     font-size: 2rem;
+}
+
+/**
+ * JQUERY-TOGGLING PAGE STYLES
+ */
+.image-toggle{
+    margin-left: -50%;
+    margin-bottom: 5%;
+    font-family: 'proza_libreregular', sans-serif;
+    font-size: 2rem;
+    color: #FFFFFF;
+    background-color: #252525;
+    transition-duration: 0.5s;
+    padding: 10px;
+    border: 1px solid #252525; border-radius: 10px; 
+}
+.image-toggle:hover{
+    background-color: #3399ff;
+    transition-duration: 0.5s;
+}
+.image-result{
+    margin-left: -35%;
+    margin-top: 10%;
 }
