--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,121 +6,104 @@
 html{
     /* background-color: #083450; */
     background-color: transparent;
-    font-size: 100%;
-}
+    font-size: 100%;}
 
 /* This overrides text-transform that is created by jQuery Mobile */
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{
-    text-shadow: none !important;
-}
+    text-shadow: none !important;}
 
 .container{
     min-width: 100%;
     min-height: 100%;
     /* background-color: #083450; very light grey is : #cccccc; */
-    background-color: #FFFFFF; /* very light grey for main background */
-}
+    background-color: #FFFFFF; /* very light grey for main background */}
 
 header.row{
     min-width: 100%;
     position: fixed;
-    z-index: 3;
-}
+    z-index: 3;}
 
 .title-container{
     background-color: #666666;
     width: 100%;
     padding-top: 10px;
     margin-top: 60px;
-    height: auto;
-}
+    height: auto;}
 
 div#main.row{
     margin-bottom: 60px;
-    padding-bottom: 0px;
-}
+    padding-bottom: 0px;}
 
 nav.navbar.navbar-default{
     
     color: #FFFFFF;
-    border: solid #083450 1px;
-}
+    border: solid #083450 1px;}
 #navbar-override{
     /* This controls stlyles that affects the entire background/block of the navigation bar from Bootstrap and overrides it where noted */
     background-color: #000000;
-    font-family: 'Open Sans', sans-serif;
-}
+    font-family: 'Open Sans', sans-serif;}
+
 #navbar-override a{
     color: #e6e6e6;
-    font-size: 14px;
-}
+    font-size: 14px;}
+
 .navbar .nav > li.dropdown.open.active > a:hover,
 .navbar .nav > li.dropdown.open > a {
     background-color: #f2f2f2;
-    color: #000000 !important;
-}
+    color: #000000 !important;}
 
 #navbar-dropdown-override{
     background-color: #f2f2f2; /* Adds a near-#FFFFFF background to the dropdown itself (not the parent link causing the dropdown) */
-    color: #000000 !important;
-}
+    color: #000000 !important;}
 
 #navbar-dropdown-override a{
-    color: #000000;
-}
+    color: #000000;}
 
 #navbar-dropdown-override a:hover{
-    background-color: #82734C; /* medium blue background when navbar items are hovered over 80BFFF*/
-}
+    background-color: #82734C; /* medium blue background when navbar items are hovered over 80BFFF*/}
 
 /**
  * #code-content overrides any Bootstrap styles for any of the Code Samples pages (also has the static-content class applied) 
  */
 #code-content h1, h2, h3, h4{
-    color: #FFFFFF;
-}
-#code-content h1{font-size: 2.5rem; letter-spacing: 0.5em; margin-top: 0%;}
+    color: #FFFFFF;}
+#code-content h1{
+    font-size: 2.5rem; 
+    letter-spacing: 0.5em; 
+    margin-top: 0%;}
 #code-content a{
     color: #252525;
     font-size: 2rem;
     font-family: 'Oxygen', sans-serif;
     font-weight: bold;
-    text-transform: uppercase;
-}
+    text-transform: uppercase;}
 
 #code-content a:hover{
-    color: #770000;
-}
+    color: #770000;}
 
 /**
  * ANY STYLES REGARDING THE FOOTER ARE HERE
  */
-#footer{
+.footer-container{
+    position: relative;
+    width: 100%;}
+.footer{
     clear: both;
     font-family: 'Oxygen', sans-serif;
     font-weight: 300;
     background-color: #000000;
     color: #FFFFFF;
-    margin-bottom: 0;
-    position: absolute;
+    margin-bottom: 0px !important;
+    position: fixed;
     width: 100%;
     padding: 2%;
     padding-top: 1%; 
     margin-top: 58em; !important;
-    height: 6.5em;
-}
+    height: 6.5em;}
 
 .footer-left{
     list-style-type: none;
-    font-size: 16px;
-    width: 45%;
-    float:left;
-    position: absolute;
-    top: 1em;
-}
-.footer-left a{
-    
-}
+    text-transform: uppercase;}
 .footer-right{
     text-align: right;
     list-style-type: none;
@@ -129,24 +112,19 @@ nav.navbar.navbar-default{
     width: 45%;
     position: absolute;
     right: 5px;;
-    top: 10px;
-}
+    top: 10px;}
 .footer-right a {
     float: right;
-    padding: 5px;
-}
+    padding: 5px;}
 .footer-right a, .footer-left a{
     color: #82734C /*#337ab7*/ !important;
-    font-size: 18px !important;
-}
+    font-size: 18px !important;}
 .footer-right a:hover, .footer-left a:hover{
     color: #82734C !important;
-    filter: grayscale(100%);
-}
+    filter: grayscale(100%);}
 .footer-right > li > a > img{width: 3em; height: 3em;}
 .bottom-spacer{
-    margin-bottom: 200px;
-}
+    margin-bottom: 200px;}
 
 /**
  * STANDARD PAGES: TEMPLATED STYLES
@@ -156,62 +134,60 @@ nav.navbar.navbar-default{
     text-shadow: 4px 2px 6px #404040;
     font-size: 4em !important;
     font-family: 'Open Sans', sans-serif;
-    text-align: center;
-}
+    text-align: center;}
 .static-content{
-    margin: auto; padding-left: 1em; padding-right: 10em;
-    margin-top: 10em; margin-bottom: 10em;
-    background-color: rgba(255,255,255, .25); color: #000000;
-    width: 80%;
-}
+    margin: auto; 
+    padding-left: 1em; 
+    padding-right: 10em;
+    margin-top: 10em; 
+    margin-bottom: 10em;
+    background-color: rgba(255,255,255, .25); 
+    color: #000000;
+    width: 80%;}
 
 .static-content p{
     font-size: 1.2em;
-    letter-spacing: 0.3px;
-}
+    letter-spacing: 0.3px;}
 .static-content h1{
     font-size: 3em; letter-spacing: 2px; width: 50%; text-align: center;
     text-transform: uppercase; 
     color: #252525;
-    padding-top: 0.2em; padding-bottom: 0.2em; padding-left: 0.2em;
-
-}
+    padding-top: 0.2em; 
+    padding-bottom: 0.2em; 
+    padding-left: 0.2em;}
 .static-content h3{
-    font-size: 2.5em; letter-spacing: 2px; text-align: center;
+    font-size: 2.5em; 
+    letter-spacing: 2px; 
+    text-align: center;
     text-transform: uppercase;
-    color: #252525;  width: 50%;
-    padding-top: 0.2em; padding-bottom: 0.2em; padding-left: 1%;
-    padding-top: 0.2em; padding-bottom: 0.2em;
-
-}
+    color: #252525; 
+    width: 50%;
+    padding-top: 0.2em; padding-bottom: 0.2em; padding-left: 1%;}
 .static-content a{
     color: #1A6FB0;
     border-top: 0.5px solid #1A6FB0; border-bottom: 0.5px solid #1A6FB0;
     transition-duration: 0.5s;
-    font-weight: bold;
-}
+    font-weight: bold;}
 .static-content a:hover{
-    color: #252525; text-decoration: none;
+    color: #252525; 
+    text-decoration: none;
     transition-duration: 0.5s;
-    border-top: 0.5px solid #363636; border-bottom: 0.5px solid #363636;
-}
+    border-top: 0.5px solid #363636; 
+    border-bottom: 0.5px solid #363636;}
 .static-content ul{
-    list-style: none;
-}
+    list-style: none;}
 .static-content > img{
-   margin: auto; margin-right: 0%;
-}
+   margin: auto; 
+   margin-right: 0%;}
 #content{
-    min-width:100%;
-}
+    min-width:100%;}
 
 .page-title{
     font-family: 'Julius Sans One', sans-serif;
     font-size: 40px;
     color: #000000;
     margin-left: 15px;
-    padding-bottom: 5px;
-}
+    padding-bottom: 5px;}
 
 /**
  * Setting up these styles to go into the auto-generated image gallery by Javascript
@@ -219,10 +195,17 @@ nav.navbar.navbar-default{
  * However, the PHP code may need some planning in order to integrate it properly into Laravel (and in an auto-generation Controller?)
  * There is an alternative example using Javascript/AJAX entirely at: http://www.codechewing.com/library/automatic-reloading-image-gallery-with-ajax-jquery/
  */
-.clear { clear:both; }
-.photo-link {padding:5px; margin:5px; border:1px solid #ccc; display:block; 
-        width:200px; float: left;}
-.photo-link:hover {border-color: #999;}
+.clear { 
+    clear:both; }
+.photo-link {
+    padding:5px; 
+    margin:5px; 
+    border:1px solid #ccc; 
+    display:block; 
+    width:200px; 
+    float: left;}
+.photo-link:hover {
+    border-color: #999;}
 /* end of image gallery styles */
 
 /**
@@ -230,8 +213,7 @@ nav.navbar.navbar-default{
  */
 .landing-image{
     padding-top: 100px;
-    float: left;
-}
+    float: left;}
 
 #right-home{
     float: left;
@@ -245,18 +227,23 @@ nav.navbar.navbar-default{
     display:inline;}
 
 #right-home h1{
-    margin-right: 10px; font-size: 4em; font-weight: 600; text-transform: uppercase;}
-#right-home h2{font-size: 1.5em; font-weight: 600; letter-spacing: 0.5px;}
-#right-home h3{font-size: 1em; letter-spacing: 0.5px;}
+    margin-right: 10px; 
+    font-size: 4em; 
+    font-weight: 600; 
+    text-transform: uppercase;}
+#right-home h2{
+    font-size: 1.5em; 
+    font-weight: 600; 
+    letter-spacing: 0.5px;}
+#right-home h3{
+    font-size: 1em; 
+    letter-spacing: 0.5px;}
 
 #right-home p{
     padding-top: 10px;
-    margin-right: 10px;
-}
+    margin-right: 10px;}
 #right-home img{
-    margin-bottom: 20px;
-}
-
+    margin-bottom: 20px;}
 
 
 /* GALLERY PAGE STYLES */
@@ -265,7 +252,8 @@ nav.navbar.navbar-default{
     margin: auto;
     min-height: 100%;}
 
-#gallery-thumbnails img{padding: 10px;}
+#gallery-thumbnails img{
+    padding: 10px;}
 
 .photo-list ul{
     display: block;
@@ -273,10 +261,16 @@ nav.navbar.navbar-default{
     margin-right: auto;
     padding-bottom: 40px;
     list-style: none;}
-.photo-list li{float:left;}
-.alert-box h2{top-margin: 200px;color: green;}
-.secure h3{top-margin: 150px;}
-.page-header.gallery-header{margin-left: 4%; width: 94%;}
+.photo-list li{
+    float:left;}
+.alert-box h2{
+    top-margin: 200px;
+    color: green;}
+.secure h3{
+    top-margin: 150px;}
+.page-header.gallery-header{
+    margin-left: 4%; 
+    width: 94%;}
 
 /**
  * THIS IS BEING USED ON UPLOAD.BLADE.PHP WHICH IS THE OLD UPLOAD FORM AND WILL LIKELY BE REMOVED
@@ -290,22 +284,18 @@ nav.navbar.navbar-default{
     margin-top: -20px;
     padding-left: 15px;
     padding-bottom: 5px;
-    color: #FFFFFF;
-}
+    color: #FFFFFF;}
 
 .upload-form-container button{
     min-width: 200px;
-    text-transform: uppercase;
-}
+    text-transform: uppercase;}
 
 .control-group{
     margin-top: 40px;
-    margin-bottom: 40px;
-}
+    margin-bottom: 40px;}
 
 .send-btn{
-    margin-left: 15px;
-}
+    margin-left: 15px;}
 
 .controls input{
     margin-left: 15px;
@@ -313,8 +303,7 @@ nav.navbar.navbar-default{
     border-radius: 5px;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-left: 5px;
-}
+    padding-left: 5px;}
 /* END OF STYLES FOR UPLOAD.BLADE.PHP */
 
 
@@ -323,20 +312,17 @@ nav.navbar.navbar-default{
 */
 #gallery-clear-bottom{
     display: block !important;
-    clear: both;
-}
+    clear: both;}
 /**
  * To be used for ALL outgoing/external links
  */
 .outgoingLink{
      color: #337ab7 !important;
-     font-size: 13px !important;
-}
+     font-size: 13px !important;}
 .outgoingLink:hover{
     background-color: #337ab7;
     color: #FFFFFF !important;
-    padding: 2px 2px 2px 2px;
-}
+    padding: 2px 2px 2px 2px;}
 /**
  * To be used for ALL internal links
  */
@@ -344,12 +330,10 @@ nav.navbar.navbar-default{
     font-size: 26px;
     font-weight: bold;
     color: blue !important;
-    padding: 4px;
-}
+    padding: 4px;}
 .internalLink:hover{
     color: #FFFFFF !important;
-    background-color: #337ab7;
-}
+    background-color: #337ab7;}
 
 /**
  * Slideshow CSS
@@ -358,160 +342,184 @@ nav.navbar.navbar-default{
         position: relative;
         width: 300px;
         height: 510px;
-        padding: 10px;
-    }
+        padding: 10px;}
  
     #slideshow > div {
         position: absolute;
         top: 10px;
-        left: 10px;
-    }
+        left: 10px;}
     #slideshow > div > img {
         border: 2px solid #000000;
-        box-shadow: 2px 2px 20px #000000;
-    }
+        box-shadow: 2px 2px 20px #000000;}
 
     .picture{
         position: relative;
-        width:100%;
-    }
+        width:100%;}
     .picture p{
         position: absolute;
         width:100%;
         color: #000000;
         font-size: 18px;
         top: 250px;
-        text-align: center;
-    }
+        text-align: center;}
 
 /**
 * ABOUT PAGE
 */
-.static-content.about{ margin-bottom: 10%;}
+.static-content.about{ 
+    margin-bottom: 10%;}
 .static-content.about h1{
-    background-color: transparent; color: #252525; font-size: 4rem;
+    background-color: transparent; 
+    color: #252525; font-size: 4rem;
     font-family: 'proza_libreregular', sans-serif;
     text-shadow: #363636 2px 3px 4px;
-    width: 80%; text-align: left; border: none;
-    
-}
+    width: 80%; 
+    text-align: left; 
+    border: none;}
 .static-content.about h3{
-    font-family: 'proza_libresemibold', sans-serif; font-size: 2.5rem;
-    color: #252525; background-color: transparent; border: none;
-    text-align: left; border-bottom: 3px solid #1A6FB0; border-radius: 0px;
-}
+    font-family: 'proza_libresemibold', sans-serif; 
+    font-size: 2.5rem;
+    color: #252525; 
+    background-color: transparent; 
+    border: none;
+    text-align: left; 
+    border-bottom: 3px solid #1A6FB0; 
+    border-radius: 0px;}
 .static-content.about h4{
-    font-family: 'proza_libresemibold', sans-serif; font-size: 2.25rem;
-    letter-spacing: 0.25rem; border-bottom: 3px solid #1A6FB0; text-transform: uppercase;
-}
+    font-family: 'proza_libresemibold', sans-serif; 
+    font-size: 2.25rem;
+    letter-spacing: 0.25rem; 
+    border-bottom: 3px solid #1A6FB0; 
+    text-transform: uppercase;}
 /* About page: Background section */
-.background, .skillset, .development-history, .academic-history { width: 90%;}
+.background, .skillset, .development-history, .academic-history { 
+    width: 90%;}
 .background p{
-    font-family: 'proza_libreregular', sans-serif; font-size: 1.5rem;
-}
+    font-family: 'proza_libreregular', sans-serif; 
+    font-size: 1.5rem;}
+
 /* About page: Skillset section */
 
-.skillset > ul{ margin-left: -1.5%;}
-.skill-headers{ font-size: 2.5rem; color: #1A6FB0; 
-    font-family: 'proza_libreregular', sans-serif; margin-left: -1.5%;}
-.skills{ font-size: 2rem; font-family: 'proza_libresemibold', sans-serif; 
-    margin-left: -2%;  line-height: 1.2; letter-spacing: 1px;}
+.skillset > ul{ 
+    margin-left: -1.5%;}
+.skill-headers{ 
+    font-size: 2.5rem; 
+    color: #1A6FB0; 
+    font-family: 'proza_libreregular', sans-serif; 
+    margin-left: -1.5%;}
+.skills{ 
+    font-size: 2rem; 
+    font-family: 'proza_libresemibold', sans-serif; 
+    margin-left: -2%;  
+    line-height: 1.2; 
+    letter-spacing: 1px;}
 /* About page: Development/work history section */
 .development-history h4{
     font-family: 'proza_libreregular', sans-serif;
-    font-size: 2rem;  margin-top: 3%; 
+    font-size: 2rem;  
+    margin-top: 3%; 
     letter-spacing: 1px;
-    text-transform: uppercase;
-    border-bottom: 3px solid #1A6FB0;
-}
+    text-transform: 
+    uppercase;
+    border-bottom: 3px solid #1A6FB0;}
 .development-history h5{
-    font-family: 'proza_libresemibold', sans-serif; font-size: 2rem; line-height: 0.5;
-    color: #1A6FB0; padding-top: 0.25em; 
-}
+    font-family: 'proza_libresemibold', sans-serif; 
+    font-size: 2rem; 
+    line-height: 0.5;
+    color: #1A6FB0; 
+    padding-top: 0.25em; }
 .development-history p{
-    font-size: 1.8rem; font-family: 'proza_libreregular', sans-serif;
-    margin-left: 1%;
-}
+    font-size: 1.8rem; 
+    font-family: 'proza_libreregular', sans-serif;
+    margin-left: 1%;}
 .development-history > h5 > a{
-    color: #1A6FB0; font-weight: 300;  text-decoration: underline;  border: none;
-}
+    color: #1A6FB0; 
+    font-weight: 300;  
+    text-decoration: underline;  
+    border: none;}
 /* About page: Academic/training history section */
 .academic-history h4{
-    text-transform: uppercase; font-family: 'proza_libresemibold', sans-serif;
-    border-bottom: 3px solid #1A6FB0; margin-top: 3%;
-}
+    text-transform: uppercase; 
+    font-family: 'proza_libresemibold', sans-serif;
+    border-bottom: 3px solid #1A6FB0; 
+    margin-top: 3%;}
 
 .academic-history h5{
-    font-size: 1.5em; line-height: 0.5; color: #1A6FB0;
-    font-family: 'proza_libresemibold', sans-serif;
-}
+    font-size: 1.5em; 
+    line-height: 0.5; 
+    color: #1A6FB0;
+    font-family: 'proza_libresemibold', sans-serif;}
 .academic-history p{
-    font-size: 1.2em; margin-left: 1%;
-}
+    font-size: 1.2em; 
+    margin-left: 1%;}
 
 /**
  * GENERAL CODING INFORMATION PAGE --- STYLES HERE
  */
 .static-content.general-coding{
-    width: 80%;
-}
+    width: 80%;}
 .static-content.general-coding h1{
-    background-color: transparent; color: #252525; font-size: 4rem;
+    background-color: transparent; 
+    color: #252525; 
+    font-size: 4rem;
     font-family: 'proza_libreregular', sans-serif;
     text-shadow: #363636 2px 3px 4px;
-    width: 80%; text-align: left; border: none;
-}
+    width: 80%; 
+    text-align: left; 
+    border: none;}
 /* General Coding Information page: Header for each programming language */
 .static-content.general-coding h3{
     font-family: 'proza_libresemibold', sans-serif;
-    color: #252525; background-color: transparent; border: none;
-    text-align: left; font-size: 4.5rem; margin-left: -1%;
-}
+    color: #252525; 
+    background-color: transparent; 
+    border: none;
+    text-align: left; 
+    font-size: 4.5rem; 
+    margin-left: -1%;}
 /* General Coding Information page: paragraph text */
 .static-content.general-coding p{
     font-family: 'proza_libreregular', sans-serif;
-    width: 90%;
-}
+    width: 90%;}
 .static-content.general-coding hr{
     border-bottom: 3px solid #1A6FB0;
-    box-shadow: #252525 2px 2px 5px;
-}
+    box-shadow: #252525 2px 2px 5px;}
 
 /**
  * CODE SAMPLE PAGES -- STYLES FOR .static-content.code-sample-page
  */
 .static-content.code-sample-page h1{
-    font-family: 'proza_libresemibold', sans-serif; text-align: left; 
-    letter-spacing: 1rem; margin-bottom: 5%;
-}
+    font-family: 'proza_libresemibold', sans-serif; 
+    text-align: left; 
+    letter-spacing: 1rem; 
+    margin-bottom: 5%;}
 
 .static-content.code-sample-page h3{
-    font-family: 'proza_libresemibold', sans-serif; text-align: left;
-    margin-top: 5%; letter-spacing: 0.5rem; margin-left: -1%;
-}
+    font-family: 'proza_libresemibold', sans-serif; 
+    text-align: left;
+    margin-top: 5%; 
+    letter-spacing: 0.5rem; 
+    margin-left: -1%;}
 
 .static-content.code-sample-page p{
-    font-family: 'proza_libreregular', sans-serif; font-size: 2rem; width: 90%;
-}
+    font-family: 'proza_libreregular', sans-serif; 
+    font-size: 2rem; 
+    width: 90%;}
 
 /* Specific styles for javascript-program pages */
 .page-header.extended-header{
     width: 90%;
     font-family: 'proza_libreregular', sans-serif;
-    font-size: 3.25rem !important; text-align: left;
-}
+    font-size: 3.25rem !important; 
+    text-align: left;}
 .program-description{
-    width: 90%;
-}
+    width: 90%;}
 .program-description h3{
     font-family: 'proza_libresemibold', sans-serif;
     font-size: 2.5rem; 
-    margin-left: -2%;
-}
+    margin-left: -2%;}
 .program-description p{
     font-family: 'proza_libreregular', sans-serif;
-    font-size: 2rem;
-}
+    font-size: 2rem;}
 
 /**
  * JQUERY-TOGGLING PAGE STYLES
@@ -525,13 +533,11 @@ nav.navbar.navbar-default{
     background-color: #252525;
     transition-duration: 0.5s;
     padding: 10px;
-    border: 1px solid #252525; border-radius: 10px; 
-}
+    border: 1px solid #252525;
+    border-radius: 10px; }
 .image-toggle:hover{
     background-color: #3399ff;
-    transition-duration: 0.5s;
-}
+    transition-duration: 0.5s;}
 .image-result{
     margin-left: -35%;
-    margin-top: 10%;
-}
+    margin-top: 10%;}
