--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,10 +4,22 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700');
 
 html{
-    /* background-color: #083450; */
     background-color: transparent;
     font-size: 100%;}
 
+/* Formatting styles */
+.page-header{
+    color: #252525;
+    font-size: 4em !important;
+    letter-spacing: 1px;
+    font-family: 'proza_libresemibold', sans-serif;  
+    text-align: center;}
+
+.uppercase-shadow{
+    text-transform: uppercase;
+    text-shadow: 4px 2px 6px #404040;}
+
+/* 
 /* This overrides text-transform that is created by jQuery Mobile */
 .ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{
     text-shadow: none !important;}
@@ -129,12 +141,7 @@ nav.navbar.navbar-default{
 /**
  * STANDARD PAGES: TEMPLATED STYLES
  */
-.page-header{
-    color: #000000;
-    text-shadow: 4px 2px 6px #404040;
-    font-size: 4em !important;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;}
+
 .static-content{
     margin: auto; 
     padding-left: 1em; 
